Icon for create content align fix

--- a/css/eze.css
+++ b/css/eze.css
@@ -1095,7 +1095,8 @@
     border-radius: 4px;
     padding: 0 15px 0 5px; }
     .eze .eze-content-types li img {
-      margin: -4px 4px 0 0; }
+      margin: -4px 4px 0 0;
+      vertical-align: middle; }
     .eze .eze-content-types li:hover {
       background: white; }
 .eze input[type="text"].write-post {
