--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -176,6 +176,7 @@
 
 			img
 				margin: -4px 4px 0 0
+				vertical-align: middle
 
 			&:hover
 				background: #fff
